--- a/src/components/Card.scss
+++ b/src/components/Card.scss
@@ -19,6 +19,7 @@
             margin-bottom: 5px;
             border-radius: 5px;
             min-height: 209px;
+            max-height: 209px;
         }
 
         .content {
