enhance(fonts): load font from local files

--- a/src/components/layouts/default/Header.module.scss
+++ b/src/components/layouts/default/Header.module.scss
@@ -17,7 +17,7 @@ header {
         height: 44px;
         color: white;
         padding: 15px;
-        font-weight: 600;
+        font-weight: bold;
     }
 }
 
