--- a/src/components/layouts/default/Menu.scss
+++ b/src/components/layouts/default/Menu.scss
@@ -13,7 +13,7 @@ nav {
                 cursor: pointer;
                 color: #fff;
                 font-size: 0.8em;
-                font-weight: 600;
+                font-weight: bold;
                 text-decoration: none;
                 padding: 0 5px;
                 padding-bottom: 7px;
